# proxmox-janitor

./: .gitignore  Dockerfile  README.md  config.example.yaml  docker-compose.yml  pyproject.toml
.github/workflows/: lint.yml
janitor/: __init__.py  config.py  main.py  scheduler.py
janitor/actions/: __init__.py  executor.py
janitor/ai/: __init__.py  anthropic_provider.py  debugger.py  openai_provider.py  provider.py  tools.py
janitor/models/: __init__.py  issue.py  metrics.py  registry.py
janitor/notifications/: __init__.py  base.py  discord_bot.py  telegram_bot.py
janitor/proxmox/: __init__.py  client.py  cluster.py  nodes.py  services.py  storage.py  vms.py
janitor/ssh/: __init__.py  client.py  commands.py
janitor/utils/: formatting.py  logging.py
tests/: test_config.py  test_executor.py
